# netpath

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  listed_iperf3_servers.json  pyproject.toml  zoom_analyze.py  zoom_capture.sh
.claude/: loop.md  settings.json
.defract/: README.md  config.yaml  project.md
.defract/design-system/: design-system.md  design-tokens.json  status.json
.defract/memory/: builder-preferences.md  decisions.md  entries.jsonl  feedback.log.jsonl  mistakes.md  project-facts.md  project.json  usage.log.jsonl  workflows.md
.defract/project-profile/: status.json
.defract/reviews/: taxonomy.json
.defract/reviews/curator/: status.json
.defract/tasks/task-auditing-iperf3-ripe-atlas-endpoint-01kwfw7s6vws/: state.json  task.md
.defract/tasks/task-country-as-path-visual-binat-rtt-anomaly-01kwaw3774eb/: state.json  task.md
.defract/tasks/task-diagnosing-country-us-trace-timeouts-01kwj6znpk1a/: state.json  task.md
.defract/tasks/task-fixing-incomplete-paths-richer-path-01kwcya418n5/: state.json  task.md
.defract/tasks/task-globe-as-path-latency-viz-pip-uv-install-01kwb0sw8gr0/: state.json  task.md
.defract/tasks/task-incomplete-paths-still-showing-in-za-01kwddfsahcm/: state.json  task.md
.defract/tasks/task-it-looks-like-we-still-have-a-ton-of-01kwje9gdqn2/: state.json  task.md
.defract/tasks/task-migrating-atlas-globalping-dropping-key-01kwhgzgj8t8/: state.json  task.md
.defract/tasks/task-netpath-as-a-one-shot-diagnostic-path-01kwaqc10tym/: state.json  task.md
.defract/tasks/task-netpath-review-mtr-fallback-host-lists-01kwjkby9hqw/: state.json  task.md
.defract/tasks/task-no-pypi-release-manual-commit-push-01kwcmdv35gm/: state.json  task.md
.defract/tasks/task-paris-traceroute-to-cut-ecmp-false-01kwhv8zfhx9/: state.json  task.md
.defract/tasks/task-publish-netpath-0-2-0-install-on-macos-01kwcs4s6hz6/: state.json  task.md
.defract/tasks/task-readme-atlas-key-docs-asn-names-in-01kwh0zv63hp/: state.json  task.md
.defract/tasks/task-scoring-the-za-country-sweep-output-01kwf9mr4338/: state.json  task.md
.github/workflows/: ci.yml  publish.yml
docs/: INVARIANTS.md  product-vision.md
src/netpath/: __init__.py  __main__.py  analytics.py  asn.py  atlas.py  cli.py  cli_json.py  cli_measurement.py  cli_monitor.py  country.py  diagnosis.py  display.py  dns.py  dns_tui.py  edge.py  explain.py  geo.py  globalping.py  globe.py  investigation.py  iperf.py  ixp.py  latency.py  local_capture.py  monitor.py  mtr.py  paris.py  path_service.py  path_tui.py  pmtu.py  processes.py  rum.py  serve.py  servers.py  speedtest.py  targets.py  trace_fusion.py  types.py  utils.py
tests/: conftest.py  test_asn.py  test_atlas.py  test_cli.py  test_country.py  test_diagnosis.py  test_display.py  test_globalping.py  test_invariants.py  test_investigation.py  test_local_capture.py  test_metrics.py  test_monitor.py  test_mtr.py  test_paris.py  test_path_service.py  test_path_tui.py  test_processes.py  test_repo_hygiene.py  test_serve.py  test_servers.py  test_speedtest.py  test_targets.py  test_trace_fusion.py  test_utils.py
(+14 files in other folders)
