[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "netpath"
dynamic = ["version"]
description = "Diagnosis-first network incident investigator for the terminal"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Nick Moore", email = "nickm@dave.io" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "dpkt>=1.9.8",
    "rich>=13.0",
    "textual>=0.86",
    "typer>=0.9",
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/holynakamoto/netpath"
"Bug Tracker" = "https://github.com/holynakamoto/netpath/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[project.scripts]
netpath = "netpath.cli:run"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/netpath/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/netpath"]
